cuarto commit agregue el css

--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>HOla mundo</h1>
+    <h1>Hola mundo</h1>
     <h2>Hola mundito</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi reiciendis tenetur, ipsam distinctio accusamus quia! Natus, velit repellat voluptatum explicabo fuga ipsam. Eius possimus expedita vel id harum aliquid in.</p>
 
